@@ -1,14 +1,27 @@
-import java.util.function.Predicate
-
-description = "today-blog API"
+description = "TODAY BLOG REST API"
 
 apply plugin: "application"
 apply plugin: 'infra.application'
 apply plugin: 'cn.taketoday.blog.conventions'
 apply plugin: 'cn.taketoday.blog.optional-dependencies'
 
-//apply plugin: 'infra.application.aot'
-//apply plugin: 'org.graalvm.buildtools.native'
+
+configure(project) {
+  if (it.hasProperty("includeAOT")) {
+    apply plugin: 'infra.application.aot'
+    apply plugin: 'org.graalvm.buildtools.native'
+
+    processTestAot {
+      enabled = false
+//      debug = true
+    }
+
+//    processAot {
+//      jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
+//      debug = true
+//    }
+  }
+}
 
 dependencies {
   implementation 'cn.taketoday:infra-starter-application'
@@ -29,7 +42,7 @@ dependencies {
   implementation 'eu.bitwalker:UserAgentUtils:1.21'
   implementation 'com.mysql:mysql-connector-j'
   implementation 'cn.taketoday:ip2region-java:1.0-SNAPSHOT'
-  
+
   implementation('com.aliyun.oss:aliyun-sdk-oss:3.18.4') {
     exclude group: "javax.xml.bind"
     exclude group: "jakarta.xml.bind"
@@ -53,13 +66,12 @@ dependencies {
 //    }
 //  }
 
-  implementation "cn.taketoday:infra-core-aot"
-
   annotationProcessor "cn.taketoday:infra-configuration-processor"
   annotationProcessor "cn.taketoday:infra-annotation-config-processor"
 
   testImplementation 'cn.taketoday:infra-starter-test'
   testImplementation 'cn.taketoday:infra-starter-webmvc-test'
+  testImplementation 'cn.taketoday:infra-starter-restclient-test'
   testImplementation 'cn.taketoday:infra-mariadb4j'
 
   testImplementation 'org.projectlombok:lombok'
@@ -73,6 +85,8 @@ compileJava {
 
 }
 
+// -Djdk.tracePinnedThreads=full
+
 application {
   applicationDefaultJvmArgs = [
       "-server",
@@ -81,10 +95,13 @@ application {
 //      "-Dinfra.profiles.active=prod",
       "--enable-native-access=ALL-UNNAMED",
       "-Dio.netty.leakDetection.level=disabled",
+      "-Dlogging.level.web=info",
+      "-Dlogging.level.root=info",
       "-Xms512M",
       "-Xmx512M"
   ]
 }
+
 
 infraJar {
   layered {
@@ -116,73 +133,3 @@ distributions {
     }
   }
 }
-
-//graalvmNative {
-//  binaries {
-//    main {
-//      imageName = 'application'
-//      mainClass = 'org.test.Main'
-//      debug = true
-//      verbose = true
-//      fallback = true
-//      sharedLibrary = false
-//      quickBuild = false
-//      richOutput = false
-//
-//      systemProperties = [name1: 'value1', name2: 'value2']
-//      configurationFileDirectories.from(file('src/my-config'))
-//      excludeConfig.put("org.example.test:artifact:version", ["^/META-INF/native-image/.*", "^/config/.*"])
-//      excludeConfig.put(file("path/to/artifact.jar"), List.of("^/META-INF/native-image/.*", "^/config/.*"))
-//
-//      // Advanced options
-//      buildArgs.add('--link-at-build-time')
-//      jvmArgs.add('flag')
-//
-//      // Runtime options
-//      runtimeArgs.add('--help')
-//
-//      useFatJar = true
-//    }
-//  }
-//
-//  agent {
-//    defaultMode = "standard"
-//    enabled = true
-//
-//    modes {
-//      standard {
-//      }
-//      conditional {
-//        userCodeFilterPath = "path-to-filter.json"
-//        extraFilterPath = "path-to-another-filter.json" // Optional
-//      }
-//      direct {
-//        options.add("config-output-dir={output_dir}")
-//        options.add("experimental-configuration-with-origins")
-//      }
-//    }
-//
-//    callerFilterFiles.from("filter.json")
-//    accessFilterFiles.from("filter.json")
-//    builtinCallerFilter = true
-//    builtinHeuristicFilter = true
-//    enableExperimentalPredefinedClasses = false
-//    enableExperimentalUnsafeAllocationTracing = false
-//    trackReflectionMetadata = true
-//
-//    metadataCopy {
-//      inputTaskNames.add("test")
-//      outputDirectories.add("META-INF/native-image/<groupId>/<artifactId>/")
-//      mergeWithExisting = true
-//    }
-//
-//    tasksToInstrumentPredicate = new Predicate<Task>() {
-//
-//      @Override
-//      boolean test(Task task) {
-//        return true
-//      }
-//    }
-//
-//  }
-//}
